RESOLVED FIXED54222
Window resizer does not have a border when there are scrollbars in WebKit2 windows
https://bugs.webkit.org/show_bug.cgi?id=54222
Summary Window resizer does not have a border when there are scrollbars in WebKit2 wi...
Sam Weinig
Reported 2011-02-10 10:37:05 PST
Window resizer does not have a border when there are scrollbars in WebKit2 windows
Attachments
Patch (7.59 KB, patch)
2011-02-10 10:45 PST, Sam Weinig
andersca: review+
Sam Weinig
Comment 1 2011-02-10 10:45:35 PST
Sam Weinig
Comment 2 2011-02-10 10:50:06 PST
Note You need to log in before you can comment on or make changes to this bug.