Source/WebKit2/UIProcess/API/mac/PageClientImpl.mm
@@ -382,6 +382,11 @@ CGContextRef PageClientImpl::containingWindowGraphicsContext()
     return static_cast<CGContextRef>([[[m_wkView window] graphicsContext] graphicsPort]);
 }
 
+void PageClientImpl::didChangeScrollbarsForMainFrame() const
+{
+    [m_wkView _didChangeScrollbarsForMainFrame];
+}
+
 void PageClientImpl::didCommitLoadForMainFrame(bool useCustomRepresentation)
 {
     [m_wkView _setPageHasCustomRepresentation:useCustomRepresentation];
